modified:   .devcontainer/Dockerfile 	modified:   .devcontainer/devcontainer.json 	modified:   .gitignore 	modified:   README.md 	modified:   wrong-manifests/wrong-resources.yaml

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,7 +29,8 @@
 				"yzhang.markdown-all-in-one",
 				"ms-kubernetes-tools.vscode-kubernetes-tools",
 				"esbenp.prettier-vscode",
-				"eamodio.gitlens"
+				"eamodio.gitlens",
+				"ms-dotnettools.dotnet-interactive-vscode"
 			]
 		}
 	},
